# joebot-message-parser

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
examples/: cli.rs
src/: filter.rs  lib.rs  main.rs  reader.rs  writers.rs
src/writers/: text.rs
tests/: filter_test.rs  reader_test.rs  test_helper.rs
tests/fixtures/: messages.html  messages_attachments.html  messages_forwarded.html  messages_forwarded_att.html
