[package]
name = "vkopt-message-parser"
version = "0.1.0"
edition = "2018"
description = "A streaming parser for VkOpt .html chat message dumps"
authors = ["texbois"]
repository = "https://github.com/texbois/vkopt-message-parser"
license = "CC0-1.0"

[dependencies]
regex = "1"
lazy_static = "1.4.0"
quick-xml = "0.17"
chrono = "0.4"

[[example]]
name = "cli"

[dev-dependencies]
clap = "2.33"
